--- a/src/components/CustomizationFeature/CustomizationFeature.module.css
+++ b/src/components/CustomizationFeature/CustomizationFeature.module.css
@@ -11,6 +11,9 @@
   .textContainer {
     flex: 1;
     max-width: 500px;
+    opacity: 0;
+    transform: translateX(-50px);
+    transition: transform 0.8s ease-out, opacity 0.8s ease-out;
   }
   
   .imageContainer {
@@ -18,8 +21,16 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    opacity: 0;
+    transform: translateX(50px);
+    transition: transform 0.8s ease-out, opacity 0.8s ease-out;
   }
-  
+  .isVisible .textContainer,
+.isVisible .imageContainer {
+  opacity: 1;
+  transform: translateX(0);
+}
+
   .heading {
     font-size: 2.5rem;
     font-weight: 800;
